feat: add BattleEffectType